variation_study/mistral_temp0.7/run1/cloudformation_009.yaml
# Generated by ollama (mistral)
# Prompt: Create a CloudFormation template for our complete application stack (VPC, EC2, RDS, S3, Load Balancer). Focus on core infrastructure components. We'll add CloudWatch alarms and detailed monitoring after we deploy and verify the basic setup works.
# Category: cloud_monitoring

AWSTemplateFormatVersion: '2010-09-09'
Description: Complete application stack for our infrastructure

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !GetAtt InternetGateway.Id

  CustomRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  Route:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref CustomRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !GetAtt InternetGateway.Id

  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: us-east-1a

  NatGateway:
    Type: AWS::EC2::NatGateways
    Properties:
      SubnetId: !Ref Subnet

  NatRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref CustomRouteTable
      SubnetId: !Ref Subnet

  EgressOnlyInternetGateway:
    Type: AWS::EC2::EgressOnlyInternetGateway

  NatGatewayToEGW:
    Type: AWS::EC2::NatGatewayToEgressOnlyInternetGatewayAssociation
    Properties:
      InternetMaxBandwidth: 15
      NatGatewayId: !Ref NatGateway
      EgressOnlyInternetGatewayId: !GetAtt EgressOnlyInternetGateway.Id

  RDSInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      AllocatedStorage: 20
      DBInstanceClass: db.t2.micro
      Engine: aurora-postgresql
      MasterUsername: myuser
      MasterUserPassword: mypassword
      VpcSecurityGroupIds:
        - !Ref RDS_SG

  S3Bucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: my-bucket
      VersioningConfiguration:
        Status: Enabled

  SG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: RDS_SG
      VpcId: !Ref VPC

  SecurityGroupIngressRule:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref SG
      IpProtocol: tcp
      FromPort: 5432
      ToPort: 5432
      CidrIp: 0.0.0.0/0

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-abc123def456
      InstanceType: t2.micro
      KeyName: mykeypair
      SecurityGroupIds:
        - !Ref SG
      SubnetId: !Ref Subnet

  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Type: application
      Internal: false
      SecurityGroups:
        - !Ref SG
      Subnets:
        - !Ref Subnet
      Scheme: internet-facing
