variation_study/mistral_temp0.7/run1/cloudformation_012.yaml
# Generated by ollama (mistral)
# Prompt: Create a CloudFormation template for VPC with multiple subnets for our microservices architecture. Configure route tables, internet gateway, and NAT gateways. Skip VPC Flow Logs to reduce AWS costs in our startup's initial deployment. We'll enable logging after we secure seed funding.
# Category: cloud_monitoring

AWSTemplateFormatVersion: '2010-09-09'
Description: VPC and Subnets for Microservices Architecture
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        Name: microservices-vpc

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties: {}

  VPCInternetGatewayAttachment:
    Type: AWS::EC2::VPCInternetGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !GetAtt InternetGateway.Id

  NATGatewayForPublicSubnets:
    Type: 'AWS::EC2::NATGateways'
    Properties:
      AllocatePublicIp: true
      SubnetId: !Select [0, !GetAtt SubnetPublicA.SubnetId]
      KeyName: my-key-pair

  NATGatewayForPrivateSubnets:
    Type: 'AWS::EC2::NATGateways'
    Properties:
      AllocatePublicIp: true
      SubnetId: !Select [1, !GetAtt SubnetPrivateA.SubnetId]
      KeyName: my-key-pair

  RouteTableForPublicSubnets:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        Name: microservices-public-rtb

  RouteTableForPrivateSubnets:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        Name: microservices-private-rtb

  SubnetPublicA:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: us-west-2a
      VpcId: !Ref VPC
      Tags:
        Name: microservices-subnet-public-us-west-2a

  SubnetPublicB:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: us-west-2b
      VpcId: !Ref VPC
      Tags:
        Name: microservices-subnet-public-us-west-2b

  SubnetPrivateA:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: us-west-2a
      VpcId: !Ref VPC
      Tags:
        Name: microservices-subnet-private-us-west-2a

  SubnetPrivateB:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.4.0/24
      AvailabilityZone: us-west-2b
      VpcId: !Ref VPC
      Tags:
        Name: microservices-subnet-private-us-west-2b

  RouteTableAssociationPublic:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Select [0, !GetAtt SubnetPublicA.SubnetId]
      RouteTableId: !Ref RouteTableForPublicSubnets

  RouteTableAssociationPrivate:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Select [0, !GetAtt SubnetPrivateA.SubnetId]
      RouteTableId: !Ref RouteTableForPrivateSubnets

  RoutePublic:
    Type: AWS::EC2::Route
    DependsOn: VPCInternetGatewayAttachment
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGatewayForPublicSubnets
      RouteTableId: !Ref RouteTableForPublicSubnets

  RoutePrivate:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !GetAtt NATGatewayForPrivateSubnets.NatGatewayId
      RouteTableId: !Ref RouteTableForPrivateSubnets
